# minishell

./: CMakeLists.txt  ListaEnlazada.c  ListaEnlazada.h  README.md  comandos.c  comandos.h  gestorProcesos.c  gestorProcesos.h  main.c  parser.h  procesos.c  procesos.h
